--- a/moviefront/package.json
+++ b/moviefront/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bootstrap-icons": "^1.8.2",
     "core-js": "^3.8.3",
     "dotenv": "^16.0.1",
     "runserve": "^2.0.5",
