--- a/moviefront/package.json
+++ b/moviefront/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.2",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
     "dotenv": "^16.0.1",
     "runserve": "^2.0.5",
     "vue": "^2.6.14",
+    "vue-pagination-2": "^3.0.91",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0"
