--- a/moviefront/package.json
+++ b/moviefront/package.json
@@ -34,6 +34,7 @@
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
+    "globals": {"Kakao":true},
     "root": true,
     "env": {
       "node": true
