--- a/moviefront/package.json
+++ b/moviefront/package.json
@@ -14,6 +14,7 @@
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
     "dotenv": "^16.0.1",
+    "jquery": "^3.6.0",
     "runserve": "^2.0.5",
     "vue": "^2.6.14",
     "vue-pagination-2": "^3.0.91",
@@ -34,7 +35,9 @@
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
-    "globals": {"Kakao":true},
+    "globals": {
+      "Kakao": true
+    },
     "root": true,
     "env": {
       "node": true
