--- a/moviefront/package.json
+++ b/moviefront/package.json
@@ -16,9 +16,11 @@
     "dotenv": "^16.0.1",
     "jquery": "^3.6.0",
     "runserve": "^2.0.5",
+    "sweetalert": "^2.1.2",
     "vue": "^2.6.14",
     "vue-pagination-2": "^3.0.91",
     "vue-router": "^3.5.1",
+    "vue-sweetalert2": "^5.0.5",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0"
   },
