--- a/moviefront/package.json
+++ b/moviefront/package.json
@@ -14,6 +14,7 @@
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
     "dotenv": "^16.0.1",
+    "gsap": "^3.10.4",
     "jquery": "^3.6.0",
     "runserve": "^2.0.5",
     "sweetalert": "^2.1.2",
